# classic-games

./: .gitignore  README.md
Doc/: 项目实战 —— 飞机大战.md
Greedy-Snake/: CMakeLists.txt  food.cpp  food.h  game.cpp  sleep  sleep.c  snak.cpp  snak.h  snake.cpp  snake.h  test  test.cpp  test.h  wall.cpp  wall.h  贪食蛇案例.cpp
代码/飞机大战/: plane_main.py  plane_sprites.py
